--- a/test/resume.html
+++ b/test/resume.html
@@ -34,7 +34,7 @@
   <meta name="application-name" content="Richard Hendriks">
 
   <meta name="author" content="Richard Hendriks">
-  <meta name="description" content="Richard Hendriks — Programmer">
+  <meta name="description" content="Richard hails from Tulsa. He has earned degrees from the University of Oklahoma and Stanford. (Go Sooners and Cardinals!">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!--[if lt IE 9]>
