--- a/test/resume.html
+++ b/test/resume.html
@@ -36,6 +36,11 @@
   <meta name="author" content="Richard Hendriks">
   <meta name="description" content="Richard hails from Tulsa. He has earned degrees from the University of Oklahoma and Stanford. (Go Sooners and Cardinals!">
 
+    <meta name="twitter:label1" content="Job">
+    <meta name="twitter:data1" content="Programmer">
+    <meta name="twitter:label2" content="Site">
+    <meta name="twitter:data2" content="http://richardhendricks.com">
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.min.js"></script>
